--- a/5 feb/29jan.html
+++ b/5 feb/29jan.html
@@ -2,10 +2,12 @@
 <head>
 <title> my cv </title>
 
+
+
 </head>
-<body>
+<body  style="background-color:black; color:white">
 <div >
-<img src="/home/6CSE3/Desktop/unnamed.jpg" alt="devika" width=100 height=100 border=5 style="float:right"/>
+<img src="/home/6CSE3/Desktop/cse177/5 feb/unnamed.jpg" alt="devika" width=100 height=100 border=5 style="float:right"/>
 </div>
 <center><h2>DEVIKA RAJESH</h2> </center>
 <center><h6>houston,tx 77204 <b>Email:</b> devika@gmail.com</h6></center>
@@ -15,7 +17,7 @@
 
 <section id="edu">
 <pre><h2>EDUCATION</h2>
-<table bgcolor="lightblue" border="5" cellpadding="5" cellspacing="2" width="75%">
+<table style ="background-color:MediumSeaGreen" border="5" cellpadding="5" cellspacing="2" width="75%">
 <tr>
 <th>Name of the institution</th>
 <th>course</th>
@@ -47,7 +49,7 @@
 <DD>An appointment is a formal date or plan to meet at the appointed time. Whether you have a doctor's appointment, a hair appointment, or a 1 o'clock lunch appointment, you need to be there — or you'll have a broken appointment. UNIVERSITY OF ABCD,university of texas</DD>
 <BR>
 <DT><B>PUBLICATIONS</B></DT>
-<p><span style="color:green; font-weight:bold">BOOK</span></p>
+<p><span style="color:Tomato; font-weight:bold">BOOK</span></p>
 <pre><DD>
 1 . In Search of Lost Time by Marcel Proust.
 2 . Ulysses by James Joyce.
@@ -62,7 +64,7 @@
 </DIV>
 
 <div>
-<p><span style="color:blue; font-weight:bold">PROFESSIONAL SUMMARY</span></p>
+<p><span style="color:Tomato; font-weight:bold">PROFESSIONAL SUMMARY</span></p>
 <ul>
 <LI>Adjunct</li>
 <LI>jsgfosgfo</li>
@@ -74,10 +76,10 @@
 bangalore;
 karnataka</address>
 
-<a href="https://presidencyuniversity.in/">university</a>
+<marquee direction="right"><a style="color:powderblue" href="https://presidencyuniversity.in/">university</a>
 <br>
-<a href="table.html">timetable</a>
+<a style="color:powderblue" href="table.html">timetable</a>
 <br>
-<a href="test.html#para">education</a>
+<a style="color:powderblue" href="test.html#para">education</a></marquee>
 </body>
 </html>
