--- a/march4/p2.html
+++ b/march4/p2.html
@@ -10,7 +10,7 @@
 <h2 align="center">Sun Up</h2>
 
 <div align="center">
-<img src="/home/6CSE3/Desktop/cse177/ee.jpeg" alt="devika" width=400 height=200 border=0 />
+<img src="/home/6CSE3/Desktop/cse177/ee.jpeg" alt="devika" width=400 height=200  />
 </div>
 
 <p class="para">Sunrise (or Sun up) is the moment when the upper limb of the Sun appears on the horizon in the morning.The term can also refer to the entire process of the solar disk crossing the horizon and its accompanying atmospheric effects.</p>
